--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,7 +7,7 @@ on:
       
 env:
   AWS_REGION: ap-northeast-2        # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: my_ecr            # set this to your Amazon ECR repository name
+  ECR_REPOSITORY: practice-ecr            # set this to your Amazon ECR repository name
   
 
 jobs:
